# puf-software-protection

./: Makefile  README.md
arch_emulator/: Dockerfile  Makefile
arch_emulator/volume/: setup.sh
arch_emulator/volume/example/: Cargo.toml  s.sh  script.txt
arch_emulator/volume/example/src/: main.rs
elf-parser/: Cargo.toml  README.md
elf-parser/src/: check_command.rs  lib.rs  main.rs  patch_command.rs  read_command.rs
enrollments/: Makefile  README.md  bbb_config.json
enrollments/enroll/: Cargo.toml  build.rs
enrollments/enroll/ecc/: README.md  reed_solomon.c  rslib.h
enrollments/enroll/src/: enroll.rs  lib.rs  main.rs  reed_solomon.rs
enrollments/scripts/: enroll.sh
kmod/: README.md
kmod/alloc_sysram/: Makefile  alloc_sysram.c
kmod/alloc_sysram/.tmp_versions/: alloc_sysram.mod
kmod/plain_puf/: Makefile  dram_puf.c
kmod/puf/: Makefile  device.c  dram_puf.c  memory.c  protocol.c  puf_ops.c
kmod/puf/ecc/: decode_rs.c  encode_rs.c  reed_solomon.c  rslib.h
llvm-passes/: CMakeLists.txt  README.md  env-vars
llvm-passes/include/: Checksum.h  Crossover.h  GraphUtils.h  OpaquePredicates.h  PufParser.h  PufPatcher.h  Utils.h
llvm-passes/include/obfuscation/: ControlFlowFlattening.h  OpaquePredicates.h  Substitution.h
llvm-passes/input/checksum/ex1/: compile.sh  ex1.rs  hash5.cpp  hash5.ll
llvm-passes/input/puf-parser/ex1/: compile.sh  enroll.json  ex1.cpp  ex1.rs
llvm-passes/lib/: CMakeLists.txt  Checksum.cpp  Crossover.cpp  CtorDtor.cpp  Dependencies.cpp  PufParser.cpp  PufPatcher.cpp
llvm-passes/tests/: test.sh  test_checksum.py  test_pufparser.py
puf-hds/: Cargo.toml  bbb_config.json  enroll.json  example_config.json
puf-hds/mock_data/: test_config.json
puf-hds/mock_data/enroll_test/: test_1_20sec  test_1_30sec  test_2_20sec  test_2_30sec
puf-hds/src/: enroll.rs  lib.rs  main.rs  reed_solomon.rs
scripts/: enroll.sh
test-puf-response/: BBB_5_20sec  Cargo.toml  enroll.txt
test-puf-response/src/: lib.rs  main.rs
