[package]
name = "puf-hds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hamming = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive", "std"] }
serde_json = { version = "1.0.108", features = [] }
