[package]
name = "puf-hds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
hamming = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive", "std"] }
serde_json = { version = "1.0.108", features = [] }
rand_chacha = "0.3.1"

[build-dependencies]
cc = "1.0.83"